Fixing overflow issue

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  min-height: 100%;
 }
 nav {
   background: #b82e00;
@@ -54,7 +55,6 @@ nav:after {
 }
 #container {
   background: url("/assets/images/pw_maze_white.png");
-  height: 100%;
 }
 #content_wrapper {
   height: 100%;
@@ -65,7 +65,6 @@ nav:after {
 #post_container {
   background: #fff;
   box-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-  height: 70%;
   margin: 30px auto;
   padding: 20px;
 }
