--- a/assets/less/default.less
+++ b/assets/less/default.less
@@ -24,6 +24,7 @@
 
 html, body{
 	height: 100%;
+	min-height: 100%;
 }
 
 nav{
@@ -80,7 +81,6 @@ nav{
 
 #container{
 	background: url("@{image_path}/pw_maze_white.png");
-	height: 100%;
 }
 
 #content_wrapper{
@@ -94,7 +94,6 @@ nav{
 #post_container{
 	background: #fff;
 	box-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-	height: 70%;
 	margin:30px auto;
 	padding: 20px;
 }
